# dave

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  release.yaml
src/: constants.rs  error.rs  lib.rs  main.rs
src/commands/: choose.rs  conda.rs  git.rs  manage.rs  mod.rs  precommit.rs  uninstall.rs
