[package]
name = "devx"
version = "0.1.0"
edition = "2021"
description = "cli for automating dev workflows"
authors = ["ajndkr <26824103+ajndkr@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/ajndkr/devx"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.42"
colored = "3.0.0"
inquire = "0.7.5"
thiserror = "2.0.11"
which = "7.0.1"

[[bin]]
name = "devx"
path = "src/main.rs"

[profile.release]
opt-level = 3     # maximum optimization for speed
lto = true        # link-time optimization, reduces binary size
codegen-units = 1 # slower compile but better optimization
strip = true      # removes debug symbols, reduces binary size
